<resources>
    <string name="app_name">Cryptrack</string>
    <string name="welcome_label">Welcome to Cryptrack</string>
    <string name="get_started">Tap to get started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetchingData">Fetching coin data…</string>
    <string name="initializingDb">Initializing database…</string>
    <string name="finishedSetup">Setup complete! Happy investing!</string>
    <string name="beginUse">Get Started</string>
    <string name="enter_quantity">Enter quantity…</string>
    <string name="required">Required</string>
    <string name="custom_buy_sell_price">Custom buy/sell price…</string>
    <string name="optional">Optional</string>
    <string name="enter_date">Enter Date…</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="_00_00">$00.00</string>
    <string name="_000_00_tokens">000.00 Tokens</string>
    <string name="net_cost">Net Cost</string>
    <string name="total_return">Total Return</string>
    <string name="_0_00per">0.00%</string>
    <string name="_0_00">0.00</string>
    <string name="percent_return">Percent Return</string>
    <string name="transactions">Transactions</string>
    <string name="completing_first_time_setup">Completing first time setup…</string>
    <string name="please_wait">Please Wait</string>
    <string name="enter_pin_to_login">Enter pin to login</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="best_gains">Best Gains</string>
    <string name="worst_losses">Worst Losses</string>
    <string name="top_25">Top 25</string>
    <string name="dSign">$</string>
    <string name="acquiring_data">Acquiring Data…</string>
    <string name="portfolio">Portfolio</string>
    <string name="total_portfolio_worth">Total Portfolio Worth</string>
    <string name="no_news_found_on_this_coin">No news found on this coin</string>
    <string name="please_create_a_pin">Please create a pin</string>
    <string name="clear">clear</string>
    <string name="del">DEL</string>
    <string name="search_for_a_coin">Search for a coin…</string>
    <string name="dolar">$</string>
    <string name="abc">ABC</string>
    <string name="name">Name</string>
    <string name="watchlist">Watchlist</string>
    <string name="coin_name">Coin Name</string>
    <string name="dollar">$</string>
    <string name="_1423_34502">1423.34502</string>
    <string name="cnn">CNN</string>
    <string name="_000_00">$000.00</string>
    <string name="_00_00_0_00">+00.00 [+0.00%]</string>
    <string name="_1h">1H</string>
    <string name="_24h">24H</string>
    <string name="_5d">5D</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="all">ALL</string>
    <string name="market_cap">Market Cap</string>
    <string name="open">Open</string>
    <string name="high">High</string>
    <string name="_000_000">000.000</string>
    <string name="low">Low</string>
    <string name="btc">BTC</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="_0_4382_btc">0.4382 BTC</string>
    <string name="_2839_28">$2839.28</string>
    <string name="_6732_63">$6732.63</string>
    <string name="buy_150_btc">BUY 150 BTC</string>
    <string name="june_08_2018">June 08, 2018</string>
    <string name="at_0_234_per_btc">at $0.234 per BTC</string>
    <string name="invested_37_234">Invested $37.234</string>
    <string name="currently_worth_89_63">Currently worth $89.63</string>
    <string name="_32_94_128_23">$32.94 (128.23%)</string>
    <string name="pin">pin</string>
</resources>
