<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="?attr/colorNormalBackground"
android:orientation="vertical"
android:id="@+id/pinLoginHolder"
tools:context=".features.authentication.login.PinLoginActivity"
android:weightSum="10">

<TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="#455A64"
        android:textAlignment="center"
        android:gravity="bottom"
        android:textSize="15sp"
        android:text="@string/enter_pin_to_login" />

<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

    <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:id="@+id/firstDigit"
            android:contentDescription="@string/pin"
            android:src="@drawable/ic_circle_unchecked" />
    <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/pin"
            android:id="@+id/secondDigit"
            android:src="@drawable/ic_circle_unchecked" />
    <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/pin"
            android:id="@+id/thirdDigit"
            android:src="@drawable/ic_circle_unchecked" />
    <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:contentDescription="@string/pin"
            android:layout_margin="5dp"
            android:id="@+id/fourthDigit"
            android:src="@drawable/ic_circle_unchecked" />

</LinearLayout>




<GridLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_gravity="center">

    <Button
            android:layout_row="0"
            android:layout_column="1"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button1"
            android:layout_margin="2dp"
            android:text="@string/_1"/>

    <Button
            android:layout_row="0"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button2"
            android:layout_margin="2dp"
            android:text="@string/_2"/>

    <Button
            android:layout_row="0"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button3"
            android:layout_margin="2dp"
            android:text="@string/_3"/>

    <Button
            android:layout_row="1"
            android:layout_column="1"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button4"
            android:layout_margin="2dp"
            android:text="@string/_4"/>

    <Button
            android:layout_row="1"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button5"
            android:layout_margin="2dp"
            android:text="@string/_5"/>

    <Button
            android:layout_row="1"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button6"
            android:layout_margin="2dp"
            android:text="@string/_6"/>

    <Button
            android:layout_row="2"
            android:layout_column="1"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button7"
            android:layout_margin="2dp"
            android:text="@string/_7"/>

    <Button
            android:layout_row="2"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button8"
            android:layout_margin="2dp"
            android:text="@string/_8"/>

    <Button
            android:layout_row="2"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#455A64"
            android:textColor="#fff"
            android:id="@+id/button9"
            android:layout_margin="2dp"
            android:text="@string/_9"/>

    <Button
            android:layout_row="3"
            android:layout_column="1"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#263238"
            android:id="@+id/button_star"
            android:textColor="#fff"
            android:layout_margin="2dp"
            android:text="@string/clear"/>

    <Button
            android:layout_row="3"
            android:layout_column="2"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#263238"
            android:textColor="#fff"
            android:id="@+id/button0"
            android:layout_margin="2dp"
            android:text="@string/_0"/>

    <Button
            android:layout_row="3"
            android:layout_column="3"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:background="#263238"
            android:textColor="#fff"
            android:id="@+id/button_del"
            android:layout_margin="2dp"
            android:text="@string/del"/>


</GridLayout>


</LinearLayout>

